Displays error (red text) if file added to uploader is too large to upload, along with appropriate server response message when that upload fails [#1066 state:resolved]

--- a/framework/modules/file/assets/css/filemanager.css
+++ b/framework/modules/file/assets/css/filemanager.css
@@ -864,3 +864,8 @@ a.resume {
 a.stop, a.stop-one {
     background: url(../images/stop.png) no-repeat 0 50%;
 }
+
+td.filesize.error {
+	color : red;
+	font-weight: bold;
+}
